[package]
name = "ws-server-web"
version = "0.1.0"
authors = ["Noktoborus <noktoborus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3"
actix-identity = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
handlebars = {version="3.5", features=["dir_source"]}
cookie = "0.15"
rand = "0.8"